objects/RH_Brand__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Mapping table - maps the value in the Source Code field of the Order (contains the 2 character Division code) to the Restoration Hardware brand to use for things like the Billing Summary email.</description>
    <fields>
        <fullName>Brand_Home_Page_URL__c</fullName>
        <label>Brand Home Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Logo_Height__c</fullName>
        <label>Brand Logo Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Logo_URL__c</fullName>
        <label>Brand Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Brand_Logo_Width__c</fullName>
        <label>Brand Logo Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Logo__c</fullName>
        <label>Brand Logo</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactUsURL__c</fullName>
        <label>ContactUsURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerServiceURL__c</fullName>
        <label>CustomerServiceURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Delay_Notification_Email__c</fullName>
        <label>Delay Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delay_Notification_Phone__c</fullName>
        <label>Delay Notification Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject_Brand__c</fullName>
        <label>Email Subject Brand</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FrequentlyAskedQuestionsURL__c</fullName>
        <label>FrequentlyAskedQuestionsURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GalleryNearestYouURL__c</fullName>
        <label>GalleryNearestYouURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MembershipRenewalURL__c</fullName>
        <label>MembershipRenewalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PrivacyPolicyURL__c</fullName>
        <label>PrivacyPolicyURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RH_Members_Program_Profile_URL__c</fullName>
        <label>RH Members Program Profile URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TermsAndConditionsURL__c</fullName>
        <label>TermsAndConditionsURL</label>
        <type>Url</type>
    </fields>
    <label>RH Brand</label>
</CustomObject>